<resources>
    <string name="app_name">SoftDrinks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Soft Drink Recipes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_favorites">My Favorites</string>

    <string name="home_fragment_title">Soft Drink Recipes</string>
    <string name="popular_drinks_title">Popular Recipes</string>
    <string name="popular_categories_title">Popular Recipe Categories</string>
    <string name="categories_title">All Categories</string>
    <string name="drink_image">Drink image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_image">category image</string>
    <string name="drinks_in_this_category">Drinks in this Category:</string>
    <string name="similar_drinks_in_this_category">Similar Drinks:</string>
    <string name="recipe_title">Recipe:</string>
    <string name="search_hint">Search for drinks or categories</string>
    <string name="search_results_title">Search Results</string>
    <string name="favorites_title">Favorites</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="share_recipe">Share Recipe</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>