<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.org.softdrinks.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.org.softdrinks.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.org.softdrinks.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_single_drink"
        android:name="com.org.softdrinks.ui.single_drink.SingleDrinkFragment"
        android:label="Single Drink"
        tools:layout="@layout/fragment_single_drink" />

    <fragment
        android:id="@+id/nav_single_category"
        android:name="com.org.softdrinks.ui.single_category.SingleCategoryFragment"
        android:label="Single Category"
        tools:layout="@layout/fragment_single_drink" />
</navigation>