<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@id/f_layout">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/drink_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/drink_image"/>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/drink_image"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/drink_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:textSize="26sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <TextView
                        android:id="@+id/drink_details"
                        android:layout_width="match_parent"
                        android:layout_margin="20dp"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/recipe_title"
                        android:textSize="22sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/drink_recipe"
                        android:layout_width="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                    <TextView
                        android:id="@+id/category_drinks_title"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/similar_drinks_in_this_category"
                        android:textSize="22sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/similar_drinks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>